HelloUltraviolet/Fixtures/RejectedSource/Patterns/IfCaseUnreachable/Expected.uv
//! Expected diagnostic metadata for the IfCaseUnreachable rejected-source specimen.

expectedDiagnostic("E-SEM-2751", "rule.17.IfCase-Unreachable")
